fixed text align

--- a/resources/art_style.css
+++ b/resources/art_style.css
@@ -21,7 +21,7 @@ p
   max-width    : 600px;
   margin-left  : auto;
   margin-right : auto;
-  text-align   : start;
+  text-align   : justify;
 }
 
 table
